correctif mineur : couleur background du collapse, alt du banner, correctif slideshow et cursor pointer sur button

--- a/src/assets/styles/components/Collapse.scss
+++ b/src/assets/styles/components/Collapse.scss
@@ -4,7 +4,7 @@ $collapse-title-padding: 8px;
 $collapse-title-border-radius: 5px;
 $collapse-title-color: $secondary;
 $collapse-title-button-color: $secondary;
-$collapse-items-background: $third;
+$collapse-items-background: #F6F6F673;
 
 @mixin collapse-styles {
   overflow: hidden;
