--- a/src/assets/styles/components/Slideshow.scss
+++ b/src/assets/styles/components/Slideshow.scss
@@ -30,6 +30,7 @@
       bottom: 0;
       width: $ctrls-size;
       border: none;
+      border-radius: 25px;
       i {
         color: $ctrls-color;
         transform: scale(6);
